# nonebot-plugin-csust-electricity

./: .env.prod  .gitignore  README.md  __init__.py  app.py  bindings.py  building_query.py  commands.py  config.py  csust_api.py  data_manager.py  electricity_query.py  message_handler.py  pyproject.toml  rate_limit.py  requirements.txt  utils.py
commands/: bind.py  clear.py  electricity.py  graph.py  help.py  query.py  schedule.py  scheduler.py  test.py
csust-qq-bot/plugins/nonebot_csust_electricity/: __init__.py  csust_api.py
csust-qq-bot/plugins/nonebot_cupsprint/: __init__.py
db/: electricity_db.py
utils/: common.py  electricity.py  scheduler.py
